--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^5.3.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
   }
