--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tt_test_backend",
+  "name": "courses_backend_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,19 +9,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nova1410/TT_Test_Backend.git"
+    "url": "git+https://github.com/Nova1410/Courses_backend_node.git"
   },
   "author": "Juan Cortés",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nova1410/TT_Test_Backend/issues"
+    "url": "https://github.com/Nova1410/Courses_backend_node/issues"
   },
-  "homepage": "https://github.com/Nova1410/TT_Test_Backend#readme",
+  "homepage": "https://github.com/Nova1410/Courses_backend_node#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
